# Android-DeepOnionJ

./: README.md  build.gradle  keystore  settings.gradle
app/: build.gradle
app/src/androidTest/java/org/deeponion/walletTemplate/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: org.deeponion.production.checkpoints.txt
app/src/main/cpp/: CMakeLists.txt  hashblock.cpp  hashblock.h
app/src/main/java/org/deeponion/android/service/: BlockchainService.java
app/src/main/java/org/deeponion/core/: AndroidWalletAppKit.java
app/src/main/java/org/deeponion/tor/: TorConstants.java  TorUtils.java
app/src/main/java/org/deeponion/walletTemplate/: AndroidWalletAppKit.java  BlockchainService.java  BlockchainServiceImpl.java  MainActivity.java  SampleTorServiceConstants.java  Test.java  WalletTemplateConstants.java
app/src/main/java/org/deeponion/walletTemplate/ui/gallery/: GalleryFragment.java  GalleryViewModel.java
app/src/main/java/org/deeponion/walletTemplate/ui/home/: HomeFragment.java  HomeViewModel.java
app/src/main/java/org/deeponion/walletTemplate/ui/website/: WebsiteFragment.java  WebsiteViewModel.java
app/src/main/res/drawable/: ic_launcher_background.xml
app/src/main/res/layout/: app_bar_main.xml  fragment_website.xml
app/src/main/res/lib/x86_64/: wrap.sh
app/src/main/res/menu/: activity_main_drawer.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: strings.xml
app/src/test/java/org/deeponion/walletTemplate/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
